--- a/senguo.cc/admin/templates/customer/cart.html
+++ b/senguo.cc/admin/templates/customer/cart.html
@@ -269,7 +269,7 @@
             </div>
             <div class="modal-footer clearfix area-footer">
                 <a href="javascript:;" class="btn tie-btn bg-green3 area-btn btn-right"  id="sureArea">继续下单</a>
-                <a href="tel:15002787394" class="btn tie-btn bg-grey9 area-btn btn-left">联系卖家</a>
+                <a href="tel:{{shop_phone}}" class="btn tie-btn bg-grey9 area-btn btn-left">联系卖家</a>
             </div>
         </div>
     </div>
